--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
  
 <body style = 'background-color: #FFDAA5'>
-    <h1 style = 'font-size: 200%; font-family: Brush Script MT'>Matchmaker Lite</h1>
+    <h1 style = 'font-size: 200%; font-family: Brush Script MT'>Matchmaker</h1>
     <pre style = 'font-size: 160%; font-family: Brush Script MT'>
 - Matchmaker by Sean Coffey                                             
 - You will be asked a series of questions, please enter how you feel.
