--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ console.log("tc="+totalCompatability);
 
 
 
-document.getElementById("compatability").innerHTML = "Your compatability is: "+totalCompatability;
+document.getElementById("compatability").innerHTML = "Your compatability is: "+totalCompatability + "%";
 }
 
 </script>
